--- a/src/Modal.css
+++ b/src/Modal.css
@@ -12,7 +12,7 @@ button{
 }
 
   
-  .modal {
+  /* .modal {
     display: none; 
     position: fixed; 
     z-index: 1; 
@@ -21,12 +21,12 @@ button{
     width: 100%; 
     height: 100%; 
     background-color: rgba(0, 0, 0, 0.5); 
-  }
+  } */
   
  
-  .modal.show {
+  /* .modal.show {
     display: block;
-  }
+  } */
   
   
   .modal-content {
